@@ -4,11 +4,11 @@
     <parent>
         <groupId>de.rub.nds</groupId>
         <artifactId>protocol-toolkit-bom</artifactId>
-        <version>6.0.1</version>
+        <version>6.2.1</version>
     </parent>
 
     <artifactId>anvil-core</artifactId>
-    <version>2.0.7-SNAPSHOT</version>
+    <version>2.1.2-SNAPSHOT</version>
     <name>Anvil-Core</name>
 
     <scm>
@@ -40,6 +40,11 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.rub.nds</groupId>
+            <artifactId>terminal-utils</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>de.rub.nds.tls</groupId>
@@ -104,7 +109,7 @@
                             <spacesPerTab>4</spacesPerTab>
                         </indent>
                         <googleJavaFormat>
-                            <version>1.25.2</version>
+                            <version>${plugin.spotless-maven-plugin.google-java-format.version}</version>
                             <style>AOSP</style>
                         </googleJavaFormat>
                         <licenseHeader>
@@ -144,9 +149,7 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    <compilerArgs>
-                        <compilerArg>-proc:full</compilerArg>
-                    </compilerArgs>
+                    <proc>full</proc>
                 </configuration>
             </plugin>
             <!-- Execute unit tests -->
